1.fixed field leak in DownloadImageTask
2. code cleanup